--- a/digamma.cabal
+++ b/digamma.cabal
@@ -12,5 +12,5 @@ Cabal-version:       >=1.2
 
 Library
   Exposed-modules:   Math.Digamma
-  Build-depends:     base, polynomial 
+  Build-depends:     base >= 4 && < 5, polynomial >= 0.6.5 && < 0.7
 
