--- a/digamma.cabal
+++ b/digamma.cabal
@@ -10,7 +10,11 @@ Author:              Ben Gamari
 Maintainer:          bgamari@gmail.com
 Category:            Math
 Build-type:          Simple
-Cabal-version:       >=1.2
+Cabal-version:       >=1.6
+
+Source-repository head
+  Type:              git
+  Location:          git://github.com/bgamari/digamma.git
 
 Library
   Exposed-modules:   Math.Digamma
