--- a/digamma.cabal
+++ b/digamma.cabal
@@ -18,5 +18,6 @@ Source-repository head
 
 Library
   Exposed-modules:   Numeric.Digamma
-  Build-depends:     base >= 4 && < 5, polynomial >= 0.6.5 && < 0.7
+  Build-depends:     base >= 4 && < 5,
+                     polynomial >= 0.6.5 && < 0.8
 
