--- a/digamma.cabal
+++ b/digamma.cabal
@@ -1,8 +1,9 @@
 Name:                digamma
 Version:             0.1
-Synopsis:            A robust implementation of the digamma function
-Description:         An implementation of the digamma function
-                     based on Thomas Minka's Matlab code.
+Synopsis:            A (deprecated) implementation of the digamma function
+Description:
+    /deprecated/ This package has been superceded by
+    'Numeric.SpecFunctions.digamma' from the @math-functions@ package.
 Homepage:            https://github.com/bgamari/digamma
 License:             BSD3
 License-file:        LICENSE
@@ -18,6 +19,5 @@ Source-repository head
 
 Library
   Exposed-modules:   Numeric.Digamma
-  Build-depends:     base >= 4 && < 5,
-                     polynomial >= 0.6.5 && < 0.8
+  Build-depends:     base >= 4 && < 5, math-functions
 
